fixtures/corpus/invalid/ws-header-signature.rune
[MOD] chat

[ENT:ws] chat.send(ChatDto): EchoDto

[DTO] ChatDto: text
    a chat line typed by a member
[DTO] EchoDto: text
    the echoed line

[TYP] text: string
    the message text
